--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head> 
     <meta charset="UTD-8">
     <title>Document</title>
+    <link rel="icon" href="https://i.pinimg.com/564x/f3/f9/e5/f3f9e5dbddd64014edee87d17179e8ac.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/font/themify-icons-font/themify-icons.css">
     <link rel="stylesheet" href="./assets/font/fontawesome-free-6.1.1-web/css/all.min.css">
@@ -12,18 +13,18 @@
           <div id="header">
             <!-- Begin nav -->
               <ul id="nav">
-                <li><a href="">Home</a></li>
-                <li><a href="">Band</a></li>
-                <li><a href="">Tour</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#band">Band</a></li>
+                <li><a href="#tour">Tour</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li>
                     <a href="#">More
                         <i class="nav-arrow-down fa-solid fa-caret-down"></i>
                     </a>
                     <ul class="subnav">
-                        <li><a href="">Merchandise</a></li>
-                        <li><a href="">Extras</a></li>
-                        <li><a href="">Media</a></li>
+                        <li><a href="#">Merchandise</a></li>
+                        <li><a href="#">Extras</a></li>
+                        <li><a href="#">Media</a></li>
                     </ul>
                 </li>
               </ul>
@@ -50,7 +51,7 @@
           <div id="content">
 
             <!-- About section -->
-            <div class="content-section">
+            <div id="band" class="content-section">
               <h2 class="section-heading">THE BAND</h2>
               <p class="section-sub-heading">We love music</p>
               <p class="about-text">
@@ -80,7 +81,7 @@
             </div>
 
             <!-- Tour section -->
-            <div class="tour-section">
+            <div id="tour" class="tour-section">
               <div class="content-section">
                 <h2 class="section-heading text-white">TUOR DATES</h2>
                 <p class="section-sub-heading text-white">Remember to book your tickets!</p>    
@@ -141,7 +142,7 @@
 
             <!-- Contact section -->
             <!-- Begin contact section -->
-            <div class="content-section">
+            <div id="contact" class="content-section">
               <h2 class="section-heading">CONTACT</h2>
               <p class="section-sub-heading">Fan? Drop a note!</p>    
               <!-- Contact body -->
