--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head> 
     <meta charset="UTD-8">
-    <title>Document</title>
-    <link rel="icon" href="https://i.pinimg.com/564x/f3/f9/e5/f3f9e5dbddd64014edee87d17179e8ac.jpg" type="image/x-icon" />
+    <title>The band</title>
+    <link rel="icon" href="./assets/img/logo-title.png" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/font/themify-icons-font/themify-icons.css">
     <link rel="stylesheet" href="./assets/font/fontawesome-free-6.1.1-web/css/all.min.css">
