--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>The band</title>
     <link rel="icon" href="./assets/img/logo-title.png" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/font/themify-icons-font/themify-icons.css">
     <link rel="stylesheet" href="./assets/font/fontawesome-free-6.1.1-web/css/all.min.css">
 </head>
@@ -34,6 +35,11 @@
               <!-- Begin: search button -->
               <div class="search-btn">
                 <i class="search-icon fa-solid fa-magnifying-glass"></i>
+              </div>
+
+              <!-- Bar for menu mobile -->
+              <div id="mobile-menu-btn">
+                <i class="menu-icon fa-solid fa-bars"></i>
               </div>
               <!-- End: search button -->
 
@@ -254,6 +260,37 @@
       modalContainer.addEventListener('click', function (event) {
         event.stopPropagation();
       })
+    </script>
+
+    <!-- Code open menu for mobile -->
+    <script>
+      var header = document.getElementById('header');
+      var mobileMenu = document.getElementById('mobile-menu-btn');
+      var parentHeight = header.clientHeight;
+      console.log(mobileMenu);
+
+      // open - close menu
+      mobileMenu.onclick = function()
+      {
+        var isClose = header.clientHeight === parentHeight ;
+        if (isClose) {
+          header.style.height = 'auto';
+        }
+        else {
+          header.style.height = null;
+        }
+      }
+
+      // close auto when click item on menu
+      var menuItems = document.querySelectorAll('#nav li a[href*="#"]');
+      for (var i = 0; i < menuItems.length; i++)
+      {
+        var menuItem = menuItems[i];
+        menuItem.onclick = function() {
+          header.style.height = null;
+          
+        }
+      }
     </script>
 </body>
 </html>
