--- a/index.html
+++ b/index.html
@@ -286,9 +286,16 @@
       for (var i = 0; i < menuItems.length; i++)
       {
         var menuItem = menuItems[i];
-        menuItem.onclick = function() {
-          header.style.height = null;
-          
+        menuItem.onclick = function(event) {
+          var isParentMenu = this.nextElementSibling && this.nextElementSibling.classList.contains('subnav');
+          if (isParentMenu)
+          {
+            event.preventDefault();
+          }
+          else 
+          {
+            header.style.height = null;
+          }
         }
       }
     </script>
