--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
                 </li>
               </ul>
               
-              <!-- End nav -->
-
               <!-- Begin: search button -->
               <div class="search-btn">
                 <i class="search-icon fa-solid fa-magnifying-glass"></i>
@@ -41,7 +39,6 @@
               <div id="mobile-menu-btn">
                 <i class="menu-icon fa-solid fa-bars"></i>
               </div>
-              <!-- End: search button -->
 
           </div>
 
@@ -116,7 +113,7 @@
                       <h3 class="place-heading">New York</h3>
                       <p class="place-time">Fri 27 Nov 2016</p>
                       <p class="place-des">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                      <button class="place-buy-btn js-buy-ticket">Buy Tickets </button> 
+                      <button class="place-buy-btn js-buy-ticket s-full-width">Buy Tickets </button> 
                     </div>
                   </div>
 
@@ -127,7 +124,7 @@
                       <h3 class="place-heading">Paris</h3>
                       <p class="place-time">Sat 28 Nov 2016</p>
                       <p class="place-des">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                      <button class="place-buy-btn js-buy-ticket">Buy Tickets </button> 
+                      <button class="place-buy-btn js-buy-ticket s-full-width">Buy Tickets </button> 
                     </div>
                   </div>
 
@@ -138,7 +135,7 @@
                       <h3 class="place-heading">San Francisco</h3>
                       <p class="place-time">Sun 29 Nov 2016</p>
                       <p class="place-des">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                      <button class="place-buy-btn js-buy-ticket">Buy Tickets </button> 
+                      <button class="place-buy-btn js-buy-ticket s-full-width">Buy Tickets </button> 
                     </div>
                   </div>
                 </div>
@@ -175,12 +172,11 @@
                     <input type="text" class="form-email" placeholder="Email">
                   </div>
                   <input type="text" class="form-message" placeholder="Message">
-                  <button class="send-btn">SEND</button>
+                  <button class="send-btn s-full-width">SEND</button>
                 </div>
               </div>
             </div>
 
-            <!-- End contact section -->
             <img src="/assets/img/map.jpg" alt="" class="img-map">          
           </div>
 
@@ -267,7 +263,6 @@
       var header = document.getElementById('header');
       var mobileMenu = document.getElementById('mobile-menu-btn');
       var parentHeight = header.clientHeight;
-      console.log(mobileMenu);
 
       // open - close menu
       mobileMenu.onclick = function()
