--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
               <!-- Item1 -->
               <div class="member-item">
                 <p class="member-name">Name</p>
-                <img src="/assets/img/tour.jpg" alt="Name" class="member-img">
+                <img src="./assets/img/tour.jpg" alt="Name" class="member-img">
               </div>
 
                <!-- Item 2 -->
               <div class="member-item">
                 <p class="member-name">Name</p>
-                <img src="/assets/img/tour.jpg" alt="Name" class="member-img">
+                <img src="./assets/img/tour.jpg" alt="Name" class="member-img">
               </div>
 
               <!-- Item 3 -->
               <div class="member-item">
                 <p class="member-name">Name</p>
-                <img src="/assets/img/tour.jpg" alt="Name" class="member-img">
+                <img src="./assets/img/tour.jpg" alt="Name" class="member-img">
               </div>
               <div class="clear"></div>
             </div>
@@ -177,7 +177,7 @@
               </div>
             </div>
 
-            <img src="/assets/img/map.jpg" alt="" class="img-map">          
+            <img src="./assets/img/map.jpg" alt="" class="img-map">          
           </div>
 
           <div id="footer">
